--- a/examples/turbopower_ipro/mainunit.lfm
+++ b/examples/turbopower_ipro/mainunit.lfm
@@ -3,15 +3,18 @@ object MainForm: TMainForm
   ClientHeight = 327
   ClientWidth = 569
   OnCreate = MainFormCreate
-  HorzScrollBar.Page = 570
-  VertScrollBar.Page = 328
-  Left = 291
+  OnDestroy = MainFormDestroy
+  PixelsPerInch = 75
+  HorzScrollBar.Page = 568
+  VertScrollBar.Page = 326
+  Left = 222
   Height = 327
   Top = 163
   Width = 569
   object OpenHTMLFileButton: TButton
     Align = alTop
     Caption = 'Open HTML File'
+    OnClick = OpenHTMLFileButtonClick
     TabOrder = 0
     Height = 25
     Width = 569
@@ -27,5 +30,13 @@ object MainForm: TMainForm
     Height = 302
     Top = 25
     Width = 569
+  end
+  object OpenDialog1: TOpenDialog
+    Title = 'Open existing file'
+    Filter = 'Web Pages|*.html;*.htm'
+    FilterIndex = 0
+    Title = 'Open existing file'
+    left = 26
+    top = 93
   end
 end
