changed the caption of the "cancel" button from Anuluj to Cancel   from Darius
 SVN 7441@trunk

--- a/ideintf/actionseditorstd.lfm
+++ b/ideintf/actionseditorstd.lfm
@@ -42,7 +42,7 @@ object FormActStandard: TFormActStandard
   end
   object btnCancel: TBitBtn
     Anchors = [akRight, akBottom]
-    Caption = 'Anuluj'
+    Caption = 'Cancel'
     Kind = bkCancel
     ModalResult = 2
     TabOrder = 2
