--- a/ide/codeexplorer.lfm
+++ b/ide/codeexplorer.lfm
@@ -1,20 +1,21 @@
 object CodeExplorerView: TCodeExplorerView
-  ActiveControl = RefreshButton
   Caption = 'CodeExplorerView'
   ClientHeight = 505
   ClientWidth = 206
   KeyPreview = True
   OnClose = CodeExplorerViewCLOSE
   OnCreate = CodeExplorerViewCREATE
+  OnDestroy = CodeExplorerViewDestroy
   OnResize = CodeExplorerViewRESIZE
-  PixelsPerInch = 90
-  HorzScrollBar.Page = 207
-  VertScrollBar.Page = 506
+  PixelsPerInch = 112
+  HorzScrollBar.Page = 205
+  VertScrollBar.Page = 504
   Left = 378
   Height = 505
   Top = 175
   Width = 206
   object RefreshButton: TButton
+    BorderSpacing.OnChange = nil
     Caption = 'Refresh'
     OnClick = RefreshButtonCLICK
     TabOrder = 0
@@ -22,6 +23,7 @@ object CodeExplorerView: TCodeExplorerView
     Width = 96
   end
   object OptionsButton: TButton
+    BorderSpacing.OnChange = nil
     Caption = 'Options'
     OnClick = OptionsButtonClick
     TabOrder = 1
@@ -31,7 +33,8 @@ object CodeExplorerView: TCodeExplorerView
   end
   object CodeTreeview: TTreeView
     Align = alBottom
-    DefaultItemHeight = 17
+    BorderSpacing.OnChange = nil
+    DefaultItemHeight = 16
     HideSelection = False
     Images = Imagelist1
     ParentCtl3D = False
@@ -53,13 +56,5 @@ object CodeExplorerView: TCodeExplorerView
   object TreePopupmenu: TPopupMenu
     left = 64
     top = 72
-    object JumpToMenuitem: TMenuItem
-      Caption = 'Jump to source'
-      OnClick = JumpToMenuitemCLICK
-    end
-    object RefreshMenuitem: TMenuItem
-      Caption = 'Refresh'
-      OnClick = RefreshMenuitemCLICK
-    end
   end
 end
