--- a/ideintf/actionseditor.lfm
+++ b/ideintf/actionseditor.lfm
@@ -6,7 +6,7 @@ object ActionListEditor: TActionListEditor
   OnClose = ActionListEditorClose
   OnKeyDown = ActionListEditorKeyDown
   OnKeyPress = ActionListEditorKeyPress
-  PixelsPerInch = 120
+  PixelsPerInch = 112
   Position = poScreenCenter
   HorzScrollBar.Page = 399
   VertScrollBar.Page = 299
@@ -16,7 +16,6 @@ object ActionListEditor: TActionListEditor
   Width = 400
   object PanelDescr: TPanel
     Align = alTop
-    BorderSpacing.OnChange = nil
     BevelOuter = bvNone
     ClientHeight = 26
     ClientWidth = 400
@@ -27,8 +26,6 @@ object ActionListEditor: TActionListEditor
     Top = 26
     Width = 400
     object lblCategory: TLabel
-      AutoSize = True
-      BorderSpacing.OnChange = nil
       Caption = 'Categories:'
       Color = clNone
       Left = 6
@@ -37,8 +34,6 @@ object ActionListEditor: TActionListEditor
       Width = 69
     end
     object lblName: TLabel
-      AutoSize = True
-      BorderSpacing.OnChange = nil
       Caption = 'Actions:'
       Color = clNone
       Left = 162
@@ -60,7 +55,6 @@ object ActionListEditor: TActionListEditor
   end
   object PanelToolbar: TPanel
     Align = alTop
-    BorderSpacing.OnChange = nil
     BevelInner = bvRaised
     BevelOuter = bvLowered
     ClientHeight = 26
@@ -71,7 +65,6 @@ object ActionListEditor: TActionListEditor
     Width = 400
     object btnAdd: TSpeedButton
       Action = ActNew
-      BorderSpacing.OnChange = nil
       Flat = True
       NumGlyphs = 0
       Spacing = 0
@@ -84,7 +77,6 @@ object ActionListEditor: TActionListEditor
     end
     object btnDelete: TSpeedButton
       Action = ActDelete
-      BorderSpacing.OnChange = nil
       Flat = True
       NumGlyphs = 0
       Spacing = 0
@@ -97,7 +89,6 @@ object ActionListEditor: TActionListEditor
     end
     object btnUp: TSpeedButton
       Action = ActMoveUp
-      BorderSpacing.OnChange = nil
       Flat = True
       NumGlyphs = 0
       Spacing = 0
@@ -110,7 +101,6 @@ object ActionListEditor: TActionListEditor
     end
     object btnDown: TSpeedButton
       Action = ActMoveDown
-      BorderSpacing.OnChange = nil
       Flat = True
       NumGlyphs = 0
       Spacing = 0
@@ -123,6 +113,7 @@ object ActionListEditor: TActionListEditor
     end
     object SBShowMenuNewActions: TSpeedButton
       AllowAllUp = True
+      BorderSpacing.OnChange = nil
       Flat = True
       Glyph.Data = {
         720000002F2A2058504D202A2F0A7374617469632063686172202A2062746E5F
@@ -144,14 +135,13 @@ object ActionListEditor: TActionListEditor
   end
   object lstActionName: TListBox
     Align = alClient
-    BorderSpacing.OnChange = nil
-    ExtendedSelect = True
     OnClick = lstActionNameClick
     OnDblClick = lstActionNameDblClick
     OnKeyDown = lstActionNameKeyDown
     OnMouseDown = lstActionNameMouseDown
     PopupMenu = PopMenuActions
     TabOrder = 2
+    TopIndex = -1
     Left = 157
     Height = 248
     Top = 52
@@ -159,12 +149,11 @@ object ActionListEditor: TActionListEditor
   end
   object lstCategory: TListBox
     Align = alLeft
-    BorderSpacing.OnChange = nil
-    ExtendedSelect = True
     OnClick = lstCategoryClick
     OnMouseDown = lstActionNameMouseDown
     PopupMenu = PopMenuActions
     TabOrder = 3
+    TopIndex = -1
     Height = 248
     Top = 52
     Width = 152
